# xdBot

./: .gitignore  AGENTS.md  CMakeLists.txt  about.md  changelog.md  mod.json  support.md
src/: global.cpp  keybinds.cpp  macro.cpp  macro.hpp  main.cpp
src/gdr/: gdr.hpp  json.hpp
src/renderer/: renderer.cpp
src/ui/: load_macro_layer.cpp  load_macro_layer.hpp  record_layer.cpp  trajectory_settings_layer.hpp
